--- a/deploy/roles/user/tasks/user.yml
+++ b/deploy/roles/user/tasks/user.yml
@@ -7,7 +7,7 @@
 
   - name: 'account | copy authorized keys'
     become: yes
-    shell: 'mkdir -p {{ home }}/.ssh -m 700 && cp /home/{{ root_user }}/.ssh/authorized_keys {{ home }}/.ssh && chown -R {{ user }}:{{ user }} {{ home }}/.ssh'
+    shell: 'mkdir -p {{ home }}/.ssh -m 700 && cp /{{ root_user }}/.ssh/authorized_keys {{ home }}/.ssh && chown -R {{ user }}:{{ user }} {{ home }}/.ssh'
 
   - name: 'account | copy ssh public key'
     become: yes
