--- a/deploy/roles/nginx/tasks/nginx.yml
+++ b/deploy/roles/nginx/tasks/nginx.yml
@@ -11,6 +11,15 @@
     - name: create letsencrypt directory
       file: name=/var/www/letsencrypt state=directory
 
+    - name: create directory
+      file: name=/var/www/{{ domain_name }} state=directory
+
+    - name: copy index.html
+      template:
+        src: templates/index.html.j2
+        dest: /var/www/{{ domain_name }}/index.html
+
+
     - name: Remove default nginx config
       file: name=/etc/nginx/sites-enabled/default state=absent
 
