--- a/deploy/roles/user/tasks/user.yml
+++ b/deploy/roles/user/tasks/user.yml
@@ -9,6 +9,9 @@
     become: yes
     shell: 'mkdir -p {{ home }}/.ssh -m 700 && cp /{{ root_user }}/.ssh/authorized_keys {{ home }}/.ssh && chown -R {{ user }}:{{ user }} {{ home }}/.ssh'
 
+  - name: 'account | copy ssh private key'
+    action: 'template src=/Users/max/.ssh/id_rsa dest={{ home }}/.ssh/id_rsa owner={{ user }} group={{ user }} mode=0700'
+
   - name: 'account | copy ssh public key'
     become: yes
     action: 'template src=id_rsa.pub dest={{ home }}/.ssh/id_rsa.pub owner={{ user }} group={{ user }} mode=0700'
