--- a/deploy/config.yml
+++ b/deploy/config.yml
@@ -22,8 +22,8 @@
     root_user: root
     user: 'deployTest1'
     home: '/home/{{ user }}'
-    app_name: 'test'
-    app_path: '{{ home }}/www{{ app_name }}'
+    app_name: 'missTravelRussia'
+    app_path: '{{ home }}/www/{{ app_name }}'
     gather_facts: false
   roles:
     - user
