верстка информации о пользователе

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
