--- a/deploy/config.yml
+++ b/deploy/config.yml
@@ -22,7 +22,7 @@
     root_user: root
     user: 'deployTest1'
     home: '/home/{{ user }}'
-    app_name: 'missTravelRussia'
+    app_name: 'missTravelRussia2018'
     app_path: '{{ home }}/www/{{ app_name }}'
     gather_facts: false
   roles:
