--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -24,8 +24,8 @@
 
 development:
   admin_name: Admin 1
-  admin_email: admin@example.com
-  admin_password: qwerty
+  admin_email: max@gmail.com
+  admin_password: nfnkfrf
   email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
   email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
   domain_name: example.com
